# mnewsprint

./: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  configure.in  mnewsprint.1  mnewsprint.in
tests/: .cvsignore  Makefile.am  msg02  msg03  msg1  msg2  test1
